--- a/styles/entry.css
+++ b/styles/entry.css
@@ -9,11 +9,24 @@ html {
   h6 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 700;
-    font-size: 70px;
+    font-size: 50px;
     margin: 0 0 0px;
     letter-spacing: 10px;
     text-transform: uppercase;
     color: #ef323b; }
+  @media (min-width: 768px) {
+    h1,
+    h2,
+    h4,
+    h5,
+    h6 {
+      font-family: 'Open Sans', sans-serif;
+      font-weight: 700;
+      font-size: 100px;
+      margin: 0 0 0px;
+      letter-spacing: 10px;
+      text-transform: uppercase;
+      color: #ef323b; } }
     h3 {
       font-family: 'Open Sans', sans-serif;
       font-weight: 600;
